Filter all multiple subclonal mutations

--- a/notebooks/Post-Processing-Fixes.ipynb
+++ b/notebooks/Post-Processing-Fixes.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "24761f1a",
    "metadata": {},
    "outputs": [],
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 2,
    "id": "98023e6c",
    "metadata": {},
    "outputs": [],
@@ -855,17 +855,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 3,
    "id": "750cfe1b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([0, 1, 2, 3, 4, 5, 6, 7, 10, 11], [8, 9])"
+       "([0, 1, 2, 3, 4, 5, 6, 7, 10, 11], [8, 9, 12, 13, 14, 15, 16, 17])"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,14 +878,14 @@
     "mutation_groups_selected = X[X['0'] > 0.5].index.tolist()\n",
     "mutation_groups_not_selected = X[X['0'] < 0.5].index.tolist()\n",
     "\n",
-    "mutation_groups_not_selected = [8, 9]\n",
+    "# mutation_groups_not_selected = [8, 9]\n",
     "\n",
     "mutation_groups_selected, mutation_groups_not_selected"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 4,
    "id": "312c2c5d",
    "metadata": {},
    "outputs": [
@@ -1255,7 +1255,7 @@
        "[9 rows x 14068 columns]"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 5,
    "id": "810a3d94",
    "metadata": {},
    "outputs": [
@@ -1483,7 +1483,7 @@
        "[2646 rows x 10 columns]"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1518,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 6,
    "id": "d4667e35",
    "metadata": {},
    "outputs": [
@@ -1637,7 +1637,7 @@
        "[2646 rows x 3 columns]"
       ]
      },
-     "execution_count": 291,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1651,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 7,
    "id": "69345d74",
    "metadata": {},
    "outputs": [
@@ -1672,7 +1672,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 8,
    "id": "c95e029a",
    "metadata": {},
    "outputs": [],
@@ -1704,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 9,
    "id": "96e9bfa0",
    "metadata": {},
    "outputs": [
@@ -1823,7 +1823,7 @@
        "[14068 rows x 3 columns]"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1834,7 +1834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 10,
    "id": "091da8c4",
    "metadata": {},
    "outputs": [
@@ -1953,7 +1953,7 @@
        "[2646 rows x 3 columns]"
       ]
      },
-     "execution_count": 295,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1964,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 11,
    "id": "35c198d2",
    "metadata": {},
    "outputs": [
@@ -2107,7 +2107,7 @@
        "[14068 rows x 5 columns]"
       ]
      },
-     "execution_count": 296,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2126,7 +2126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 12,
    "id": "6c97ac32",
    "metadata": {},
    "outputs": [
@@ -2147,7 +2147,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 297,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2158,18 +2158,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 13,
    "id": "18c6a6ac",
    "metadata": {},
    "outputs": [],
    "source": [
     "mutation_group_update = mutation_group_update[['mutation', 'clone']]\n",
-    "mutation_group_update.to_csv(f\"../data/laks/scope/kmeans_labels_filter_25_reclustered_8_9.csv\")"
+    "mutation_group_update.to_csv(f\"../data/laks/scope/kmeans_labels_filter_25_reclustered_all.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 14,
    "id": "2e5eb669",
    "metadata": {},
    "outputs": [
