Run SCOPE on simulated data

--- a/notebooks/Laks.ipynb
+++ b/notebooks/Laks.ipynb
@@ -438,6 +438,15 @@
     {
       "cell_type": "code",
       "execution_count": 6,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "F.to_csv(\"../data/laks/scope/F.csv\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
       "metadata": {
         "id": "ccLiNVaBUJhJ"
       },
