Run SCOPE on simulated data

--- a/notebooks/Laks.ipynb
+++ b/notebooks/Laks.ipynb
@@ -11712,6 +11712,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## Systematic Study"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
