Rerun Meta-Cohort Dataset with LOH conflicts 50

--- a/notebooks/SCOPE on Ovarian Cancer Dataset.ipynb
+++ b/notebooks/SCOPE on Ovarian Cancer Dataset.ipynb
@@ -2141,7 +2141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -2350,7 +2350,7 @@
         "        S, _ = generate_perfect_phylogeny(B)\n",
         "        T = add_clusters_to_mutation_T(S, X, G, B)\n",
         "\n",
-        "        draw_clone_tree(T, f\"{solution_path}/T.svg\")\n",
+        "        draw_clone_tree(T, filepath=f\"{solution_path}/T.svg\")\n",
         "        draw_clone_tree(T)\n",
         "        \n",
         "    except Exception as e:\n",
